Fixed for jumping to top in properties when scrolled
Removed all a href='#' links in properties to avoid jumping to top of
page

--- a/WebContent/styles/properties.css
+++ b/WebContent/styles/properties.css
@@ -179,6 +179,12 @@ div.propertyDialogue {
 	min-width: 25px;
 }
 
+.propertyAction, .dialogueClose {
+	cursor:pointer;
+	color: #00e;
+	text-decoration: underline;
+}
+
 .dialogueTable {
 	width:100%;
 	border-collapse: collapse;
